--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,20 @@ body {
   padding: 0;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 1s ease-in-out;
+}
+
+
 /* index.css */
 .font-Poppins {
   font-family: "Poppins", sans-serif;
